2010-02-14: gtklick 0.6.4

  * Updated spanish translation.
  * Removed unnecessary checks for runtime depencies from setup.py.

2010-01-28: gtklick 0.6.3

  * Added spanish translation by Pablo Fernández.

2009-07-09: gtklick 0.6.2

  * Added russian translation, thanks to Damir Abdullin.
  * Slightly changed the program icon to make it more visible on a dark
    background.

2009-01-29: gtklick 0.6.1

  * Changed keyboard shortcuts for tempo, volume and start/stop to work
    without the Ctrl key.
  * Added a menu icon.

2009-01-24: gtklick 0.6.0

  * Fixed a bug that caused a crash at startup.
  * Fixed a crash when removing JACK ports in the preferences dialog.
  * Added support for gettext, and a german translation. Translations for
    other languages are welcome.

2009-01-14: gtklick 0.5.0

  * Added capability to load custom audio samples, and to change the sound's
    pitch.
  * Changed the speed trainer so that the regular tempo setting is now the
    upper limit.
  * klick 0.11.0 or later is now required.

2008-12-03: gtklick 0.4.0

  * Allow manual selection of JACK ports to connect to.
  * Some minor fixes.

2008-10-24: gtklick 0.3.0

  * It's now possible to save and restore profiles.
  * Lots of minor bugfixes and cleanup.

2008-10-17: gtklick 0.2.0

  * Added speed trainer and pattern editor.

2008-08-17: gtklick 0.1.3

  * Work around a GTK quirk that prevented the about dialog from showing up.

2008-08-14: gtklick 0.1.2

  * Terminate klick correctly on file->quit from the main menu.
  * Some code cleanup.

2008-08-13: gtklick 0.1.1

  * Increased timeout when starting klick, to work around some liblo
    strangeness (slow startup under certain circumstances, e.g. with
    avahi-daemon running).

2008-08-11: gtklick 0.1.0

  * Initial release.